--- a/web103_unit3_project-main/package.json
+++ b/web103_unit3_project-main/package.json
@@ -2,13 +2,18 @@
   "name": "unitygridplaza",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"cd client && vite\" \"cd server && nodemon server\"",
-    "start": "cd server && node server",
-    "build": "cd client && vite build"
+    "build": "cd client && vite build",
+    "start": "npm run reset && cd server && nodemon server.js",
+    "reset": "node server/config/reset.js",
+    "dev": "cd server && nodemon server.js",
+    "client": "cd client && vite",
+    "dev:all": "concurrently \"npm run dev\" \"npm run client\""
   },
   "dependencies": {
     "@picocss/pico": "^1.5.7",
+    "axios": "^1.12.2",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
